fix: Remove border radius on mobile devices

--- a/src/sass/components/button.scss
+++ b/src/sass/components/button.scss
@@ -1,6 +1,10 @@
 @use '../util' as *;
 
 .btn {
+  --webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0;
   cursor: pointer;
   display: inline-flex;
   align-items: center;
